--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <img src="froll_48.png" alt="Froll.net" class="logo"/>
       <div>
         <h1>Froll.net</h1>
-        <p>Decentralized. Uncensored. Free Speech.</p>
+        <p>Your Voice. Your Platform. Your Rules</p>
       </div>
     </div>
     <div class="wallet-area">
