--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Froll.net</title>
+  <title>Froll.net - Your Voice. Your Platform.</title>
   <link rel="stylesheet" href="style.css"/>
   <link rel="icon" type="image/png" href="froll_48.png"/>
 </head>
