--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <section class="info-bar">
     <div id="frollPrice">1 FROLL ≈ $-- USD</div>
     <a href="https://lottery.vin" class="trade-link" target="_blank">Swap FROLL/VIC</a>
-    <a href="https://docs.google.com/document/d/1OxPMY35kBH3VyEJ3HHtqfD18LZcUdZht/edit?usp=sharing" class="guide-link" target="_blank">📘 Guide</a>
+    <a href="https://docs.google.com" class="guide-link" target="_blank">📘 Guide</a>
   </section>
 
   <nav id="mainNav" style="display: none;"></nav>
