--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
 
-  <!-- 🔼 Tip + Made with ❤️ chuyển lên đầu -->
   <div class="top-message">
     <p class="tip">
       Tip: Use VIC chain in MetaMask. On mobile, open in the wallet's browser (e.g. Viction, MetaMask).
@@ -38,9 +37,18 @@
     <a href="https://docs.google.com" class="guide-link" target="_blank">📘 Guide</a>
   </section>
 
-  <nav id="mainNav" style="display: none;"></nav>
+  <main id="mainContent">
+    <h2>Create a Post</h2>
+    <form id="postForm">
+      <label for="postContent">Post Content (max 20,000 characters)</label>
+      <textarea id="postContent" placeholder="Enter your post content here..." required></textarea>
+      <button type="submit">Create Post</button>
+    </form>
 
-  <main id="mainContent"></main>
+    <div id="postList">
+      <!-- Posts will be displayed here -->
+    </div>
+  </main>
 
   <footer></footer>
 
@@ -50,31 +58,18 @@
   <script>
     async function fetchFrollPrice() {
       try {
-        const res = await fetch('https://api.binance.com/api/v3/ticker/price?symbol=VICUSDT');  <!-- API lấy giá VIC -->
-        
-        if (!res.ok) {
-          throw new Error("API request failed");
-        }
-
+        const res = await fetch('https://api.binance.com/api/v3/ticker/price?symbol=VICUSDT');
         const data = await res.json();
-
-        // Kiểm tra nếu dữ liệu trả về hợp lệ
-        if (!data.price || isNaN(data.price)) {
-          throw new Error("Invalid price data received");
-        }
-
-        const vicUsd = parseFloat(data.price);  // Giá VIC
-        const frollUsd = (vicUsd * 100).toFixed(2);  // Giá FROLL = VIC * 100
-
+        const vicUsd = parseFloat(data.price);
+        const frollUsd = (vicUsd * 100).toFixed(2);
         document.getElementById("frollPrice").innerText = `1 FROLL ≈ $${frollUsd} USD`;
       } catch (error) {
-        console.error(error);  // Log lỗi ra console để kiểm tra
         document.getElementById("frollPrice").innerText = "1 FROLL ≈ $-- USD";
       }
     }
 
     fetchFrollPrice();
-    setInterval(fetchFrollPrice, 60000);  <!-- Cập nhật giá mỗi phút -->
+    setInterval(fetchFrollPrice, 60000);  // Update price every minute
   </script>
 </body>
 </html>
