--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+  <!-- Thông điệp đầu trang -->
   <div class="top-message">
     <p class="tip">
       Tip: Use VIC chain in MetaMask. On mobile, open in the wallet's browser (e.g. Viction, MetaMask).
@@ -16,6 +17,7 @@
     <p class="made">Made with ❤️ on the VIC blockchain</p>
   </div>
 
+  <!-- Header -->
   <header>
     <div class="logo-area">
       <img src="froll_48.png" alt="Froll.net" class="logo"/>
@@ -26,36 +28,46 @@
     </div>
     <div class="wallet-area">
       <span id="walletAddress">Not connected</span>
+      <span id="frollBalance">FROLL: 0</span>
+      <span id="vicBalance">VIC: 0</span>
       <button id="connectBtn">Connect Wallet</button>
       <button id="disconnectBtn" style="display:none;">Disconnect</button>
     </div>
   </header>
 
+  <!-- Thanh thông tin giá FROLL và các liên kết -->
   <section class="info-bar">
     <div id="frollPrice">1 FROLL ≈ $-- USD</div>
     <a href="https://lottery.vin" class="trade-link" target="_blank">Swap FROLL/VIC</a>
     <a href="https://docs.google.com" class="guide-link" target="_blank">📘 Guide</a>
   </section>
 
+  <!-- Nội dung chính -->
   <main id="mainContent">
+    <!-- Form tạo bài viết mới -->
     <h2>Create a Post</h2>
     <form id="postForm">
       <label for="postContent">Post Content (max 20,000 characters)</label>
       <textarea id="postContent" placeholder="Enter your post content here..." required></textarea>
+      <label for="postLink">Attach Image/Video URL</label>
+      <input type="text" id="postLink" placeholder="Enter URL of image or video"/>
       <button type="submit">Create Post</button>
     </form>
 
+    <!-- Danh sách bài đăng -->
     <div id="postList">
-      <!-- Posts will be displayed here -->
+      <!-- Các bài đăng sẽ được hiển thị ở đây -->
     </div>
   </main>
 
+  <!-- Footer -->
   <footer></footer>
 
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
   <script src="app.js"></script>
 
   <script>
+    // Hàm lấy giá FROLL từ API Binance
     async function fetchFrollPrice() {
       try {
         const res = await fetch('https://api.binance.com/api/v3/ticker/price?symbol=VICUSDT');
@@ -69,7 +81,7 @@
     }
 
     fetchFrollPrice();
-    setInterval(fetchFrollPrice, 60000);  // Update price every minute
+    setInterval(fetchFrollPrice, 60000);  // Cập nhật giá mỗi phút
   </script>
 </body>
 </html>
