--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     </div>
     <div class="wallet-area">
       <span id="walletAddress">Not connected</span>
-      <span id="frollBalance">FROLL: 0</span>
-      <span id="vicBalance">VIC: 0</span>
+      <span id="frollBalance"></span>
+      <span id="vicBalance"></span>
       <button id="connectBtn">Connect Wallet</button>
       <button id="disconnectBtn" style="display:none;">Disconnect</button>
     </div>
