--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
     </div>
   </header>
 
+  <!-- Thanh điều hướng sau khi kết nối ví -->
+  <div id="mainNav" style="display: none;">
+    <button class="nav-btn" onclick="showHome(true)">🏠 Home</button>
+    <button class="nav-btn" onclick="showProfile()">👤 My Profile</button>
+    <button class="nav-btn" onclick="showMyPosts()">📝 My Posts</button>
+  </div>
+
   <!-- Thanh thông tin giá FROLL và các liên kết -->
   <section class="info-bar">
     <div id="frollPrice">1 FROLL ≈ $-- USD</div>
