--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <!-- 🔼 Tip + Made with ❤️ chuyển lên đầu -->
+  <!-- Thông điệp đầu trang -->
   <div class="top-message">
     <p class="tip">
       Tip: Use VIC chain in MetaMask. On mobile, open in the wallet's browser (e.g. Viction, MetaMask).
@@ -17,6 +17,7 @@
     <p class="made">Made with ❤️ on the VIC blockchain</p>
   </div>
 
+  <!-- Header -->
   <header>
     <div class="logo-area">
       <img src="froll_48.png" alt="Froll.net" class="logo"/>
@@ -41,24 +42,31 @@
     <a href="https://docs.google.com" class="guide-link" target="_blank">📘 Guide</a>
   </section>
 
-  <!-- Thanh điều hướng chính -->
-  <nav id="mainNav" style="display:none;">
-    <button class="nav-btn" onclick="showHome()">🏠 Home</button>
-    <button class="nav-btn" onclick="showProfile()">👤 My Profile</button>
-    <button class="nav-btn" onclick="showNewPost()">✍️ New Post</button>
-  </nav>
-
   <!-- Nội dung chính -->
   <main id="mainContent">
-    <!-- Các bài viết sẽ hiển thị ở đây -->
+    <h2>Create a Post</h2>
+    <form id="postForm">
+      <label for="postContent">Post Content (max 20,000 characters)</label>
+      <textarea id="postContent" placeholder="Enter your post content here..." required oninput="autoResize(this)" style="resize:none;"></textarea>
+      <label for="postLink">Attach Image/Video URL</label>
+      <input type="text" id="postLink" placeholder="Enter URL of image or video"/>
+      <button type="submit">Create Post</button>
+    </form>
+
+    <!-- Danh sách bài đăng -->
+    <div id="postList">
+      <!-- Các bài đăng sẽ được hiển thị ở đây -->
+    </div>
   </main>
 
+  <!-- Footer -->
   <footer></footer>
 
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
   <script src="app.js"></script>
 
   <script>
+    // Hàm lấy giá FROLL từ API Binance
     async function fetchFrollPrice() {
       try {
         const res = await fetch('https://api.binance.com/api/v3/ticker/price?symbol=VICUSDT');
@@ -73,6 +81,12 @@
 
     fetchFrollPrice();
     setInterval(fetchFrollPrice, 60000);  // Cập nhật giá mỗi phút
+
+    // Hàm tự động thay đổi chiều cao của textarea khi người dùng nhập
+    function autoResize(textarea) {
+      textarea.style.height = 'auto';
+      textarea.style.height = textarea.scrollHeight + 'px';
+    }
   </script>
 </body>
 </html>
