--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Froll.net - Swap FROLL/VIC</title>
+    <title>Swap FROLL/VIC</title>
     <link rel="icon" href="froll_48.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
