--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Kết nối ví -->
     <div id="connect-interface" class="interface">
-        <img src="128.png" alt="FrollSwap Logo" class="logo" style="display: block; margin: 0 auto;">
+        <img src="froll_48.png" alt="FrollSwap Logo" class="logo" style="display: block; margin: 0 auto;">
         
         <!-- Thêm div bao quanh giá FROLL và đoạn thông báo để có độ rộng bằng nhau -->
         <div class="equal-width-segments">
