--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <span id="froll-price" class="froll-price">Loading price...</span>
             </div>
             <div class="segment">
-                <p class="italic-bold">Please open Froll.net in your MetaMask browser (on Viction Network) to connect and swap FROLL/VIC</p>
+                <p class="italic-bold">Please open https://bit.ly/FortuneRolls in your MetaMask browser (on Viction Network) to connect and swap FROLL/VIC</p>
             </div>
         </div>
 
